[gd_scene load_steps=30 format=2]

[ext_resource path="res://font/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://0807/ui/myBG.gd" type="Script" id=2]
[ext_resource path="res://0807/test0807.gd" type="Script" id=3]
[ext_resource path="res://0807/ui/scorelist.gd" type="Script" id=4]
[ext_resource path="res://0807/ui/top_panel.gd" type="Script" id=5]
[ext_resource path="res://0807/ui/damap.gd" type="Script" id=6]
[ext_resource path="res://0807/ui/ability.gd" type="Script" id=7]
[ext_resource path="res://0807/bgm/hope-mp3.mp3" type="AudioStream" id=8]
[ext_resource path="res://0807/img/classroom-background.png" type="Texture" id=9]
[ext_resource path="res://0807/img/wb.png" type="Texture" id=10]
[ext_resource path="res://0807/img/hospital.png" type="Texture" id=11]
[ext_resource path="res://0807/img/dormitory.png" type="Texture" id=12]
[ext_resource path="res://0807/img/office.png" type="Texture" id=13]
[ext_resource path="res://0807/img/bookstore.png" type="Texture" id=14]
[ext_resource path="res://0807/bgm/myPlayer.gd" type="Script" id=15]
[ext_resource path="res://0807/ui/person_panel.gd" type="Script" id=16]
[ext_resource path="res://0807/style/button_select_right.tres" type="StyleBox" id=17]
[ext_resource path="res://0807/style/main_big_trunk.tres" type="StyleBox" id=18]

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.717647, 0.74902, 0.709804, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.54902, 0.470588, 0.392157, 0.815686 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id=2]
ItemList/styles/bg = null

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.227451, 0.537255, 0.74902, 0.941176 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.717647, 0.74902, 0.709804, 0.886275 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.262745, 0.552941, 0.752941, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.329412 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.466667, 0.427451, 0.392157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Node2D" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
script = ExtResource( 5 )

[node name="DONOTEDIT5" type="Panel" parent="Panel"]
margin_left = 472.0
margin_top = 153.0
margin_right = 592.0
margin_bottom = 217.0
custom_styles/panel = SubResource( 11 )

[node name="DONOTEDIT4" type="Panel" parent="Panel"]
margin_left = 447.0
margin_top = 48.0
margin_right = 615.0
margin_bottom = 88.0
custom_styles/panel = SubResource( 10 )

[node name="scorelist" type="ItemList" parent="Panel"]
margin_left = 13.0
margin_top = 344.0
margin_right = 164.0
margin_bottom = 544.0
rect_min_size = Vector2( 0, 200 )
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/vseparation = 11
custom_constants/hseparation = 9
custom_styles/bg = SubResource( 3 )
auto_height = true
script = ExtResource( 4 )

[node name="ability" type="Panel" parent="Panel"]
margin_left = 13.0
margin_top = 240.0
margin_right = 164.0
margin_bottom = 317.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="logic" type="Label" parent="Panel/ability"]
anchor_top = -0.175
anchor_bottom = -0.175
margin_left = 13.0
margin_top = 24.475
margin_right = 75.0
margin_bottom = 49.475
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.117647 )
custom_fonts/font = ExtResource( 1 )
text = "1"

[node name="language" type="Label" parent="Panel/ability"]
margin_left = 86.0
margin_top = 11.0
margin_right = 148.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.117647 )
text = "2"

[node name="cognition" type="Label" parent="Panel/ability"]
margin_left = 13.0
margin_top = 48.0
margin_right = 75.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.117647 )
text = "3"

[node name="emotion" type="Label" parent="Panel/ability"]
margin_left = 86.0
margin_top = 48.0
margin_right = 148.0
margin_bottom = 73.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.117647 )
text = "4"

[node name="selectMenu" type="ItemList" parent="Panel"]
margin_left = 936.0
margin_top = 255.0
margin_right = 994.0
margin_bottom = 487.0
custom_styles/bg = SubResource( 9 )

[node name="to_map" type="Button" parent="Panel/selectMenu"]
margin_left = 2.0
margin_top = 2.0
margin_right = 55.0
margin_bottom = 47.0
custom_colors/font_color_focus = Color( 0.588235, 0.0784314, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 0.784314 )
custom_styles/normal = ExtResource( 17 )
text = "地图"

[node name="to_action" type="Button" parent="Panel/selectMenu"]
margin_left = 2.0
margin_top = 62.0
margin_right = 55.0
margin_bottom = 107.0
custom_colors/font_color_focus = Color( 0.588235, 0.0784314, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 0.780392 )
custom_styles/normal = ExtResource( 17 )
text = "行动"

[node name="to_task" type="Button" parent="Panel/selectMenu"]
margin_left = 3.0
margin_top = 122.0
margin_right = 56.0
margin_bottom = 167.0
custom_colors/font_color_focus = Color( 0.588235, 0.0784314, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 0.780392 )
custom_styles/normal = ExtResource( 17 )
text = "任务"

[node name="to_rel" type="Button" parent="Panel/selectMenu"]
margin_left = 2.0
margin_top = 182.0
margin_right = 55.0
margin_bottom = 227.0
custom_colors/font_color_focus = Color( 0.588235, 0.0784314, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 0.780392 )
custom_styles/normal = ExtResource( 17 )
text = "关系"

[node name="go" type="Button" parent="Panel"]
margin_left = 936.0
margin_top = 528.0
margin_right = 992.0
margin_bottom = 584.0
custom_colors/font_color = Color( 0, 0, 0, 0.705882 )
custom_styles/normal = SubResource( 6 )
text = "执行"

[node name="ProgressBar" type="ProgressBar" parent="Panel"]
margin_left = 184.0
margin_top = 98.0
margin_right = 904.0
margin_bottom = 133.0
custom_styles/bg = SubResource( 5 )
min_value = 6.0
max_value = 22.0
value = 6.0
percent_visible = false

[node name="finish" type="Button" parent="Panel"]
margin_left = 927.0
margin_top = 16.0
margin_right = 1003.0
margin_bottom = 80.0
custom_styles/normal = SubResource( 8 )
text = "回合结束"

[node name="remain_rounds" type="Label" parent="Panel"]
margin_left = 458.0
margin_top = 61.0
margin_right = 538.0
margin_bottom = 78.0
text = "剩余xx回合"

[node name="nowtime" type="Label" parent="Panel"]
margin_left = 566.0
margin_top = 60.0
margin_right = 606.0
margin_bottom = 77.0
text = "10:30"

[node name="DONOTEDIT1" type="Label" parent="Panel"]
margin_left = 858.0
margin_top = 107.0
margin_right = 898.0
margin_bottom = 124.0
text = "22:00"

[node name="DONOTEDIT2" type="Label" parent="Panel"]
margin_left = 191.0
margin_top = 107.0
margin_right = 231.0
margin_bottom = 124.0
text = "06:00"

[node name="DONOTEDIT3" type="Label" parent="Panel"]
margin_left = 499.0
margin_top = 163.0
margin_right = 581.0
margin_bottom = 186.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "所选行动："

[node name="selected_action_name" type="Label" parent="Panel"]
margin_left = 397.0
margin_top = 192.0
margin_right = 667.0
margin_bottom = 209.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "暂无"
align = 1

[node name="main_tree_scroll" type="ScrollContainer" parent="Panel"]
visible = false
margin_left = 184.0
margin_top = 224.0
margin_right = 904.0
margin_bottom = 601.0

[node name="main_tree" type="Tree" parent="Panel/main_tree_scroll"]
margin_right = 720.0
margin_bottom = 370.0
rect_min_size = Vector2( 720, 370 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/vseparation = 5
custom_styles/bg = ExtResource( 18 )
hide_folding = true

[node name="isdoneornot" type="CheckButton" parent="Panel"]
margin_left = 731.0
margin_top = 176.0
margin_right = 899.0
margin_bottom = 216.0
text = "筛选已完成"

[node name="damap" type="Panel" parent="Panel"]
margin_left = 184.0
margin_top = 224.0
margin_right = 904.0
margin_bottom = 594.0
custom_styles/panel = ExtResource( 18 )
script = ExtResource( 6 )

[node name="DONOTEDIT4" type="Label" parent="Panel/damap"]
margin_left = 159.0
margin_top = 33.0
margin_right = 199.0
margin_bottom = 50.0
text = "地点"

[node name="DONOTEDIT5" type="Label" parent="Panel/damap"]
margin_left = 520.0
margin_top = 33.0
margin_right = 560.0
margin_bottom = 50.0
text = "人物"

[node name="locs_panel" type="Panel" parent="Panel/damap"]
margin_left = 36.0
margin_top = 89.0
margin_right = 321.0
margin_bottom = 254.0
custom_styles/panel = SubResource( 12 )

[node name="classroom" type="Button" parent="Panel/damap/locs_panel"]
margin_left = 9.0
margin_top = 15.0
margin_right = 89.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "教室"

[node name="office" type="Button" parent="Panel/damap/locs_panel"]
margin_left = 102.0
margin_top = 15.0
margin_right = 182.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "办公室"

[node name="dormitory" type="Button" parent="Panel/damap/locs_panel"]
margin_left = 197.0
margin_top = 15.0
margin_right = 277.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "宿舍"

[node name="bookstore" type="Button" parent="Panel/damap/locs_panel"]
margin_left = 9.0
margin_top = 95.0
margin_right = 89.0
margin_bottom = 145.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "书店"

[node name="cybercafe" type="Button" parent="Panel/damap/locs_panel"]
margin_left = 102.0
margin_top = 95.0
margin_right = 182.0
margin_bottom = 145.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "网吧"

[node name="hospital" type="Button" parent="Panel/damap/locs_panel"]
margin_left = 197.0
margin_top = 95.0
margin_right = 277.0
margin_bottom = 145.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "医院"

[node name="person_panel" type="Panel" parent="Panel/damap"]
margin_left = 397.0
margin_top = 89.0
margin_right = 682.0
margin_bottom = 254.0
custom_styles/panel = SubResource( 13 )
script = ExtResource( 16 )

[node name="self" type="Button" parent="Panel/damap/person_panel"]
visible = false
margin_left = 100.0
margin_top = 55.0
margin_right = 180.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "自我"

[node name="classTeacher" type="Button" parent="Panel/damap/person_panel"]
visible = false
margin_left = 100.0
margin_top = 55.0
margin_right = 180.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "班主任"

[node name="mother" type="Button" parent="Panel/damap/person_panel"]
visible = false
margin_left = 100.0
margin_top = 55.0
margin_right = 180.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "母亲"

[node name="bestFriend" type="Button" parent="Panel/damap/person_panel"]
visible = false
margin_left = 100.0
margin_top = 55.0
margin_right = 180.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "挚友"

[node name="firstLove" type="Button" parent="Panel/damap/person_panel"]
margin_left = 100.0
margin_top = 55.0
margin_right = 180.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "初恋"

[node name="boss" type="Button" parent="Panel/damap/person_panel"]
visible = false
margin_left = 100.0
margin_top = 55.0
margin_right = 180.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = ExtResource( 17 )
text = "书店老板"

[node name="Button" type="Button" parent="Panel"]
visible = false
margin_left = 490.0
margin_top = 521.0
margin_right = 600.0
margin_bottom = 564.0
rect_min_size = Vector2( 10, 10 )
text = "测试"
script = ExtResource( 3 )

[node name="myBG" type="Node2D" parent="Panel"]
script = ExtResource( 2 )

[node name="Dormitory" type="Sprite" parent="Panel/myBG"]
position = Vector2( 512, 304 )
scale = Vector2( 2.03125, 1.625 )
z_index = -1
texture = ExtResource( 12 )

[node name="Classroom-background" type="Sprite" parent="Panel/myBG"]
position = Vector2( 512, 300 )
scale = Vector2( 2, 1.5625 )
z_index = -1
texture = ExtResource( 9 )

[node name="Office" type="Sprite" parent="Panel/myBG"]
position = Vector2( 512, 304 )
scale = Vector2( 2.03125, 1.625 )
z_index = -1
texture = ExtResource( 13 )

[node name="Bookstore" type="Sprite" parent="Panel/myBG"]
position = Vector2( 512, 308 )
scale = Vector2( 2.03125, 1.64583 )
z_index = -1
texture = ExtResource( 14 )

[node name="Wb" type="Sprite" parent="Panel/myBG"]
position = Vector2( 516, 310 )
scale = Vector2( 2.04688, 1.67708 )
z_index = -1
texture = ExtResource( 10 )

[node name="Hospital" type="Sprite" parent="Panel/myBG"]
position = Vector2( 520, 304 )
scale = Vector2( 2.04688, 1.67708 )
z_index = -1
texture = ExtResource( 11 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Panel"]
margin_left = 355.0
margin_top = 304.0
margin_right = 601.0
margin_bottom = 379.0
rect_min_size = Vector2( 100, 70 )
window_title = "结束回合"
dialog_text = "你确定要结束回合吗"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
script = ExtResource( 15 )

[connection signal="button_up" from="Panel/selectMenu/to_map" to="Panel" method="_on_button_show_map"]
[connection signal="button_up" from="Panel/selectMenu/to_action" to="Panel" method="_on_button_click_show_action"]
[connection signal="button_up" from="Panel/selectMenu/to_task" to="Panel" method="_on_button_click_show_task"]
[connection signal="button_up" from="Panel/selectMenu/to_rel" to="Panel" method="_on_button_click_show_rel"]
[connection signal="button_up" from="Panel/go" to="Panel" method="_on_button_click_go"]
[connection signal="button_up" from="Panel/finish" to="Panel" method="_on_button_click_finish_round"]
[connection signal="item_selected" from="Panel/main_tree_scroll/main_tree" to="Panel" method="_on_tree_item_selected"]
[connection signal="button_up" from="Panel/isdoneornot" to="Panel" method="_on_button_click_isdoneornot"]
[connection signal="button_up" from="Panel/damap/locs_panel/classroom" to="Panel/myBG" method="_on_button_activate_classroom"]
[connection signal="button_up" from="Panel/damap/locs_panel/office" to="Panel/myBG" method="_on_button_activate_office"]
[connection signal="button_up" from="Panel/damap/locs_panel/dormitory" to="Panel/myBG" method="_on_button_activate_dormitory"]
[connection signal="button_up" from="Panel/damap/locs_panel/bookstore" to="Panel/myBG" method="_on_button_activate_bookstore"]
[connection signal="button_up" from="Panel/damap/locs_panel/cybercafe" to="Panel/myBG" method="_on_button_activate_wb"]
[connection signal="button_up" from="Panel/damap/locs_panel/hospital" to="Panel/myBG" method="_on_button_activate_hospital"]
[connection signal="button_up" from="Panel/damap/person_panel/self" to="Panel/damap/person_panel" method="_on_self_button_up"]
[connection signal="button_up" from="Panel/damap/person_panel/classTeacher" to="Panel/damap/person_panel" method="_on_classTeacher_button_up"]
[connection signal="button_up" from="Panel/damap/person_panel/mother" to="Panel/damap/person_panel" method="_on_mother_button_up"]
[connection signal="button_up" from="Panel/damap/person_panel/bestFriend" to="Panel/damap/person_panel" method="_on_bestFriend_button_up"]
[connection signal="button_up" from="Panel/damap/person_panel/firstLove" to="Panel/damap/person_panel" method="_on_firstLove_button_up"]
[connection signal="button_up" from="Panel/damap/person_panel/boss" to="Panel/damap/person_panel" method="_on_boss_button_up"]
[connection signal="button_up" from="Panel/Button" to="Panel/Button" method="test"]
[connection signal="confirmed" from="Panel/ConfirmationDialog" to="Panel" method="_on_button_click_finish_round_really"]
